committing, pushing to remote

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>Runkeeper access_token: <%= rk_token %></p>
+    <p>Strava access_token: <%= st_token %></p>
   </body>
 </html>
